frontend/test/should_pass/successfulTermination_004.grg
test t
{	
	:P();
}

pattern P
{
	.;
	:Q();
}

pattern Q
{
	.;
	alternative {
		recursive {
			:P();
		}
		base {
			:R();
		}
	}
}

pattern R
{
}
