frontend/test/should_fail/recursionOverEmptyPatterns_001.grg
test t
{	
	:P();
}

pattern P
{
	:P();
}
